fixed p tag and border radius nav overflow

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -58,6 +58,9 @@
 }
 
 @media (max-width: 755px) {
+  p {
+    text-align: center;
+  }
   h1 {
     font-size: 4rem;
   }
@@ -74,7 +77,7 @@
   }
 
   nav {
-    height: 25vh;
+    height: 300px;
   }
 
   .flex-nav ul {
@@ -83,7 +86,14 @@
     align-items: center;
 
     li {
-      margin-bottom: 2em;
+      padding: 20px;
+      margin-bottom: 1em;
+    }
+
+    a {
+      border-radius: 0;
+      background: none;
+      border-bottom: 2px solid $accent-color;
     }
   }
 }
